# rebas-daily

./: .gitignore  README.md  pyproject.toml
config/: config.toml  sources.toml
config/profiles/: academic.toml  art.toml  data.toml  design.toml  finance.toml  quant.toml  repos.toml  tech.toml
config/prompts/: checker.md  checker_background.md  editor.md  editor_classic.md  editor_classic_paper.md  researcher.md  researcher_articles.md  screen.md  style.md  writer.md  writer_brief.md
docs/: OPERATIONS.md
scripts/: cron_batch.sh  crontab.example  deploy_site.sh  rebas-admin.service  verify_codex.sh  vps_bootstrap.sh  vps_pull_config.sh  vps_sync.sh
src/rebas/: __init__.py  cli.py  config.py  db.py  models.py  pipeline.py
src/rebas/admin/: __init__.py  app.py  auth.py  traffic.py
src/rebas/agents/: __init__.py  prompts.py  stages.py
src/rebas/collect/: __init__.py  arxiv.py  base.py  boards.py  feeds.py  hf.py  journals.py  reddit.py  runner.py
src/rebas/llm/: __init__.py  base.py  codex_cli.py
src/rebas/render/: __init__.py  export.py  site.py
tests/: test_admin.py  test_collect.py  test_enrich.py  test_export.py  test_llm.py  test_paper_fulltext.py  test_pipeline.py  test_smoke.py  test_traffic.py
web/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
web/public/: manifest.webmanifest  sw.js
web/src/components/: BriefRow.astro  FeatureCard.astro  Footer.astro  IssueHome.astro  Masthead.astro  Tag.astro
web/src/layouts/: Layout.astro
web/src/lib/: data.ts
web/src/pages/: [slug].astro  archive.astro  index.astro  (+2 more)
(+7 files in other folders)
