[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rebas"
version = "0.1.0"
description = "rebas_daily — 个人每日信息刊物管线"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "trafilatura>=1.8",
    "httpx>=0.27",
    "jinja2>=3.1",
    "latex2mathml>=3.77",
    "markdown>=3.6",
    "nh3>=0.2",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
rebas = "rebas.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
